cabal-version:       2.2

name:                cat-haven
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cat-haven#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable cat-haven
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , scotty
    , beam-core
    , beam-sqlite
    , beam-migrate
    , sqlite-simple
    , aeson
    , text
    , http-conduit
    , time
    , bytestring
    , wai
    , wai-cors >= 0.2.7
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:
      Models
      Db
      Api
